@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 08-Jun-2011 Christophe Demko
  # [#26062] gray bars in Firefox/Safari above and under the Submenue in adminlists (Rouven Weßling)
+ # [#26065] Bluestork clean up (Rouven Weßling)
 
 07-Jun-2011 Jean-Marie Simonet
  $ Updating site en-GB.lib_joomla.ini
